maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:20: error: not found: value testmur
        testmur(i,j);
        ^ShortestPathMaze:27: error: not found: value i
      setIndication(i,j,compteur+1);
                    ^ShortestPathMaze:27: error: not found: value j
      setIndication(i,j,compteur+1);
                      ^ShortestPathMaze:32: error: not found: value i
        setIndication(i,j,compteur+1);
                      ^ShortestPathMaze:32: error: not found: value j
        setIndication(i,j,compteur+1);
                        ^